Details
-
Bug
-
Resolution: Fixed
-
Major
Description
It happens only when themesvc is stopped + explorer band is active when closing the file browser.
Explorer process dies then with an unhandled exception.
The exception most likely is present since a long time.
Not verified, but most likely this was unhidden by r72495 too, since then many exceptions are not longer eaten up by user32.
If we can not find a solution quickly, it's most likely possible to workaround the same as CORE-11915 (therefore the linkage).
a log with break on first chance exception + log2lines
r72853-explorer-crash.log
Attachments
Issue Links
- relates to
-
CORE-11915 [WIN32SS/USER32] Pseudo-Regressions of r72495 EPIC
-
- Open
-