reactos/dll/win32/browseui/addressband.cpp
@@ -197,7 +197,10 @@ HRESULT STDMETHODCALLTYPE CAddressBand::CloseDW(DWORD dwReserved)
 
     m_hWnd = NULL;
 
-    IUnknown_SetSite(fAddressEditBox, NULL);
+    CComPtr<IShellService> pservice;
+    HRESULT hres = fAddressEditBox->QueryInterface(IID_PPV_ARG(IShellService, &pservice));
+    if (SUCCEEDED(hres ))
+        pservice->SetOwner(NULL);
 
     if (fAddressEditBox) fAddressEditBox.Release();
     if (fSite) fSite.Release();
