reactos/dll/win32/browseui/internettoolbar.cpp
@@ -934,6 +934,8 @@ HRESULT STDMETHODCALLTYPE CInternetToolbar::CloseDW(DWORD dwReserved)
             return hResult;
         ReleaseCComPtrExpectZero(fLogoBar);
     }
+
+    SetSite(NULL);
     return S_OK;
 }
 
